--- a/config/database.yml
+++ b/config/database.yml
@@ -1,3 +1,11 @@
+mysql: &mysql
+  adapter: mysql2
+  database: "<%=ENV['OPENSHIFT_APP_NAME']%>"
+  username: "<%=ENV['OPENSHIFT_MYSQL_DB_USERNAME']%>"
+  password: "<%=ENV['OPENSHIFT_MYSQL_DB_PASSWORD']%>"
+  host:     <%=ENV['OPENSHIFT_MYSQL_DB_HOST']%>
+  port:     <%=ENV['OPENSHIFT_MYSQL_DB_PORT']%>
+
 # SQLite version 3.x
 #   gem install sqlite3
 #
@@ -22,4 +30,4 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+
